--- a/Forfood project/resources/css/style.css
+++ b/Forfood project/resources/css/style.css
@@ -18,3 +18,24 @@ body {
   width: 960px;
   margin:0 auto;
 }
+
+header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url("img/hero.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+}
+
+.hero-text-box {
+  position: absolute;
+  width: 960px;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+
+h1 {
+  margin:0;
+}
