--- a/Forfood project/resources/css/style.css
+++ b/Forfood project/resources/css/style.css
@@ -1,4 +1,6 @@
-/* GLOBAL */
+/* ------------------------------------------- */
+/* BASIC SETUP */
+/* ------------------------------------------- */
 
 * {
   margin: 0;
@@ -14,31 +16,14 @@ body {
   text-rendering: optimizeLegibility;
 }
 
+/* ----------------------------------------------- */
+/* BASIC SETUP */
+/* ----------------------------------------------- */
 .row {
   width: 960px;
   margin:0 auto;
 }
-
-header {
-  /* padaromas paveiksliukas patamsintas, kad butu galima uzrasyti teksta */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url("img/hero.jpg");
-    /* padaromas, kad paveiksliukas uzdengtu viska ir kad butu centre  */
-  background-size: cover;
-  background-position: center;
-      /* padaromas, kad paveiksliukas turetu view height ( per atidaryta langa) */
-  height: 100vh;
-}
-
-.hero-text-box {
-  position: absolute;
-  width: 960px;
-  top:50%;
-  left: 50%;
-  /* be transform - tekstas butu zemiau. situo tekstas pakeliamas */
-  transform: translate(-50%, -50%);
-}
-
-
+/* -----------HEADINGS----------------------------- */
 
 h1 {
   margin-top:0;
@@ -52,6 +37,9 @@ h1 {
   letter-spacing: 1px;
   word-spacing: 4px;
 }
+
+/* -----------BUTTONS------------------------------- */
+
 /* :link reiskia mygtuko busena normalioje busenoje; visited- busena aplankius */
 .btn:link, 
 .btn:visited {
@@ -98,4 +86,28 @@ h1 {
 .btn-ghost:active {
   border:1px solid #cf6d17;
   color:#fff;
+}
+
+
+/* --------------------------------------------- */
+/* HEADER */
+/* --------------------------------------------- */
+
+header {
+  /* padaromas paveiksliukas patamsintas, kad butu galima uzrasyti teksta */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url("img/hero.jpg");
+    /* padaromas, kad paveiksliukas uzdengtu viska ir kad butu centre  */
+  background-size: cover;
+  background-position: center;
+      /* padaromas, kad paveiksliukas turetu view height ( per atidaryta langa) */
+  height: 100vh;
+}
+
+.hero-text-box {
+  position: absolute;
+  width: 960px;
+  top:50%;
+  left: 50%;
+  /* be transform - tekstas butu zemiau. situo tekstas pakeliamas */
+  transform: translate(-50%, -50%);
 }
