--- a/Forfood project/resources/css/style.css
+++ b/Forfood project/resources/css/style.css
@@ -220,8 +220,21 @@ header {
 }
 
 /* --------------------------------------------- */
+/* features*/
+/* --------------------------------------------- */
+
+.section-features .long-copy {
+  margin-bottom: 40px;
+
+}
+
+/* --------------------------------------------- */
 /* MEALS*/
 /* --------------------------------------------- */
+
+.section-meals {
+  padding: 0;
+}
 
 .meals-showcase {
   list-style: none;
@@ -238,9 +251,23 @@ header {
 .meal-photo {
   width: 100%;
   margin: 0;
+  /* overflow nes uzdejus animacijai scale 1.15(kas gaunas 115proc) img tampa didesni uz pati page. */
+  overflow: hidden;
+  background-color: #000;
 }
 
 .meal-photo img {
+  opacity: 0.7;
   width: 100%;
   height: auto;
+  /* ANIMACIJA */
+  transform: scale(1.15);
+  transition: transform 0.5s, opacity 0.5s;
+  
+
+}
+/* ANIMACIJA */
+.meal-photo img:hover {
+  transform: scale(1.03);
+  opacity: 1;
 }
