--- a/Forfood project/resources/css/style.css
+++ b/Forfood project/resources/css/style.css
@@ -440,4 +440,72 @@ header {
    vertical-align: middle;
  }
 
+ /* --------------------------------------------- */
+/* sign up */
+/* --------------------------------------------- */
+
+.section-plans {
+  background-color: #f4f4f4;
+}
+
+.plan-box {
+  background-color: #fff;
+  border-radius: 5px;
+  width: 95%;
+  margin-left: 2.5%;
+  box-shadow: 0 2px 2px;
+  /* ANIMATION */
+  transform: scale(0.95);
+  transition: transform 0.5s, opacity 0.5s;
+}
+/* ANIMATION */
+.plan-box:hover {
+  transform: scale(1.03);
+  opacity: 1;
+} 
+
+.plan-box div {
+  padding: 15px;
+  border-bottom: 1px solid #e8e8e8;
+}
+
+.plan-box div:first-child{
+  background-color: #fcfcfc;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.plan-box div:last-child {
+  text-align: center;
+  border:0;
+}
+
+.plan-price {
+  font-size: 300%;
+  margin-bottom: 10px;
+  font-weight: 100;
+  color:#e67e22
+}
+
+.plan-price span {
+  font-size: 30%;
+  font-weight: 300;
+}
+
+.plan-price-meal {
+  font-size: 75%;
+}
+
+.plan-box ul {
+  list-style: none;
+  font-size: 80%;
+}
+
+.plan-box ul li {
+  padding: 5px 0;
+}
+
+
+
+
 
