--- a/Forfood project/resources/css/style.css
+++ b/Forfood project/resources/css/style.css
@@ -516,6 +516,7 @@ header {
 .contact-form {
   width: 60%;
   margin-left: 10%;
+  font-size: 80%;
 }
 
 input[type=text],
@@ -538,6 +539,82 @@ input[type="checkbox"] {
 
 *:focus {outline:none;}
 
+ /* --------------------------------------------- */
+/* form */
+/* --------------------------------------------- */
 
+footer {
+  background-color:#333;
+  padding: 30px;
+  font-size: 80%;
+}
 
+.footer-nav {
+  list-style: none;
+  float: left;
+}
 
+.social-links{
+  list-style: none;
+  float:right;
+}
+
+.footer-nav li,
+.social-links li {
+  display: inline-block;
+  margin-right: 20px;
+  font-size: 90%;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child {
+  margin-right:0;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited {
+  text-decoration: none;
+  border: 0;
+  color:#888;
+  transition: 0.3s;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active{
+  color:#fcfcfc;
+}
+.social-links li a:link,
+.social-links li a:visited {
+  font-size: 165%;
+}
+
+.ion-logo-facebook,
+.ion-logo-twitter,
+.ion-logo-googleplus,
+.ion-logo-instagram {
+  transition: color 0.3s;
+}
+
+.ion-logo-facebook:hover {
+  color:#3b5998;
+}
+.ion-logo-twitter:hover {
+  color:#55acee;
+}
+
+.ion-logo-googleplus:hover {
+  color:#dd4b39;
+}
+
+.ion-logo-instagram:hover {
+  color:#e95950;
+}
+
+footer p {
+  color:#888;
+  text-align: center;
+  margin-top: 60px;
+  font-size: 70%;
+}
