--- a/Forfood project/resources/css/style.css
+++ b/Forfood project/resources/css/style.css
@@ -21,12 +21,14 @@ darker orange: #cf6d17
   box-sizing: border-box;
 }
 
-body {
+body,
+html {
   background-color: #fff;
   color:#555;
   font-family: 'Raleway', sans-serif;
   font-size: 20px;
   text-rendering: optimizeLegibility;
+  overflow-x:hidden;
 }
 /* Naudojant float, reikia naudoti ir clearfix, nes elementus sufloatinus parent tagai sufeilina */
 .clearfix {zoom: 1;}
@@ -488,7 +490,7 @@ header {
   font-size: 300%;
   margin-bottom: 10px;
   font-weight: 100;
-  color:#e67e22
+  color:#e67e22;
 }
 
 .plan-price span {
@@ -532,6 +534,7 @@ textarea {
 textarea {
   height: 100px;
 }
+/* grid css span width per didelis, todel sumazinom, kad pavadinimai ir stulpeliai butu arciau vienas kito  */
 #form-name {
   width: 22%;
 }
