--- a/Forfood project/resources/css/style.css
+++ b/Forfood project/resources/css/style.css
@@ -21,11 +21,12 @@ darker orange: #cf6d17
   box-sizing: border-box;
 }
 
-body,
-html {
+html,
+body{
   background-color: #fff;
   color:#555;
   font-family: 'Raleway', sans-serif;
+  Font-weight: 300;
   font-size: 20px;
   text-rendering: optimizeLegibility;
   overflow-x:hidden;
@@ -44,11 +45,11 @@ html {
 /* REUSABLE COMPONENTS */
 /* ----------------------------------------------- */
 .row {
-  width: 960px;
+  max-width: 1140px;
   margin:0 auto;
 }
 section {
-  padding: 80px;
+  padding: 80px 0;
 }
 
 .box {
@@ -57,8 +58,8 @@ section {
 /* -----------HEADINGS----------------------------- */
 
 
-h1
-h2
+h1,
+h2,
 h3 {
   /* jei pagrindini teksta darom dideli - reikia nuimti raidziu weight, uzdeti spacing tarp raidziu ir zodziu */
   font-weight: 300;
@@ -72,6 +73,7 @@ h1 {
   /* daromas procentais, 200% atitinka 20px. Jei noresima pakeisti, pakeist reiks body, ir cia pasikeis automatiskai */
   font-size:240%;
   word-spacing: 4px;
+  letter-spacing: 1px;
 }
 
 h2 {
@@ -79,6 +81,7 @@ h2 {
   word-spacing: 2px;
   text-align: center;
   margin-bottom: 30px;
+  letter-spacing: 1px;
 }
 
 h3 {
@@ -99,9 +102,9 @@ h2:after {
 
 .long-copy {
   line-height: 145%;
-  width: 85%;
+  width: 70%;
   /* uzdejus width 85 - paragrafas nera per vidury, todel padarome kad butu per vidury su  marg-left. Is viso yra 100 proc, jei width duodam 85, tuomet lieka 15 proc. Darom is kaires ir desines kad butu po 7.5 ( viso 100) */
-  margin-left: 7.5%;
+  margin-left: 15%;
 }
 
 .box p {
@@ -112,24 +115,24 @@ h2:after {
 /* -----------ICONS------------------------------- */
 
 .icon-big {
-  font-size: 260%;
+  font-size: 350%;
   display: block;
   color: #cf6d17;
   margin-bottom: 10px;
 }
 
 .icon-small {
-  color: #cf6d17;
-  padding-right: 10px;
   display: inline-block;
   width: 30px;
   text-align: center;
+  color: #cf6d17;
   font-size: 120%;
+  margin-right: 10px;
 
-  /* align text and icons */
+  /* secrets align text and icons */
   line-height: 120%;
   vertical-align: middle;
-  margin-top: -4px;
+  margin-top: -5px;
 }
 
 /* -----------BUTTONS------------------------------- */
@@ -145,7 +148,8 @@ h2:after {
   text-decoration: none;
   border-radius: 200px;
   /* perejimas i uzdeta spalva ne is kart, o per 0.2 s */
-  transition: background-color 0.4s, border 0.4s, color 0.4s;
+  -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
+  transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
 .btn-full:link, 
@@ -156,7 +160,7 @@ input[type=submit] {
   /*  uzdejus border, mygtukas ghost tapo didesnis, todel islyginant dydi borderi uzdedam ir sitam */
   border:1px solid #e67e22; 
   color:#fff;
-  margin-right: 15px
+  margin-right: 15px;
 }
 
 .btn-ghost:link, 
@@ -189,18 +193,18 @@ input[type=submit]:active  {
 
 a:link,
 a:visited {
-  text-decoration: none;
-  border-bottom: 2px solid #cf6d17;
-  color: #cf6d17;
-  
+    color: #e67e22;
+    text-decoration: none;
+    padding-bottom: 1px;
+    border-bottom: 1px solid #e67e22;
+    -webkit-transition: border-bottom 0.2s, color 0.2s;
+    transition: border-bottom 0.2s, color 0.2s;
 }
 
 a:hover,
 a:active {
-  color: #555;
-  border-bottom: 2px solid  transparent;
-  transition: 0.3s;
-
+    color: #555;
+    border-bottom: 1px solid transparent;
 }
 
 /* --------------------------------------------- */
@@ -213,24 +217,27 @@ header {
     /* padaromas, kad paveiksliukas uzdengtu viska ir kad butu centre  */
   background-size: cover;
   background-position: center;
+  height: 100vh;
   background-attachment: fixed;
       /* padaromas, kad paveiksliukas turetu view height ( per atidaryta langa) */
-  height: 100vh;
+  
 }
 
 .hero-text-box {
   position: absolute;
-  width: 960px;
+  width: 1140px;
   top:50%;
   left: 50%;
   /* be transform - tekstas butu zemiau. situo tekstas pakeliamas */
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
 
 .logo {
   height: 100px;
   width: auto;
-  float:left;
+  float: left;
   margin-top: 20px;
 }
 
@@ -238,7 +245,7 @@ header {
   float: right;
   /* basic steps formating nav*/
   list-style: none;
-  margin-top: 50px;
+  margin-top: 55px;
 }
 
 .main-nav li {
@@ -249,6 +256,7 @@ header {
 
 .main-nav li a:link,
 .main-nav li a:visited {
+  padding: 8px 0;
   color:#fff;
   text-decoration: none;
   text-transform: uppercase;
@@ -256,8 +264,9 @@ header {
   font-size: 90%;
   /* tam kad hover veiktu, borderis turi buti, todel ji suteikiam tik padarom nematomu*/
   border-bottom: 2px solid transparent;
-  transition: border-bottom 0.7s;
-  padding: 6px 0;
+  -webkit-transition: border-bottom 0.2s;
+  transition: border-bottom 0.2s;
+  
 }
 
 .main-nav li a:hover,
@@ -270,7 +279,7 @@ header {
 /* --------------------------------------------- */
 
 .section-features .long-copy {
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 
 }
 
@@ -278,9 +287,7 @@ header {
 /* MEALS*/
 /* --------------------------------------------- */
 
-.section-meals {
-  padding: 0;
-}
+.section-meals {padding: 0;}
 
 .meals-showcase {
   list-style: none;
@@ -307,15 +314,20 @@ header {
   width: 100%;
   height: auto;
   /* ANIMACIJA */
+  -webkit-transform: scale(1.15);
+  -ms-transform: scale(1.15);
   transform: scale(1.15);
+  -webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
   transition: transform 0.5s, opacity 0.5s;
   
 
 }
-/* ANIMACIJA */
+/* ANIMACIJA */c
 .meal-photo img:hover {
-  transform: scale(1.03);
   opacity: 1;
+  -webkit-transform: scale(1.03);
+  -ms-transform: scale(1.03);
+  transform: scale(1.03);
 }
 
 /* --------------------------------------------- */
@@ -325,16 +337,19 @@ header {
 .section-steps {
   background-color: #f4f4f4;
 }
+.step-box {
+  margin-top: 30px;
+}
 
 .step-box:first-child {
   text-align: right;
   padding-right: 3%;
-  margin-top: 30px;
 }
 
 .step-box:last-child {
+  text-align: left;
   padding-left: 3%;
-  margin-top: 30px;
+  margin-top: 70px;
 }
 
 .app-screen {
@@ -346,21 +361,22 @@ header {
 }
 /* last of type, parenka paskutini */
 .work-step:last-of-type {
-  margin-bottom: 40px;
+  margin-bottom: 80px;
 }
 
 .work-step div {
   color:#cf6d17;
-  border: 2px solid #cf6d17;
-  display: inline-block;
-  border-radius: 50%;
-  height: 50px;
-  width: 50px;
-  text-align: center;
-  padding: 5px;
-  float:left;
   font-size: 150%;
+  height: 54px;
+  width: 54px;
+  border: 2px solid #cf6d17;
+  border-radius: 50%;
+  display: inline-block;
+  text-align: center;
   margin-right: 25px;
+  float: left;
+  padding: 5px;
+
 }
 
 .btn-app:link,
@@ -394,10 +410,6 @@ header {
  
 }
 
-.cities-feature p {
- display: inline;
-
-}
 
 .cities-feature a {
   display: inline;
@@ -408,13 +420,11 @@ header {
 /* --------------------------------------------- */
 
  .section-testimonials {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url("img/back-customers.jpg");
-  /* linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), padaromas, kad paveiksliukas uzdengtu viska ir kad butu centre  */
+  background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
   background-size: cover;
+  color: #fff;
   background-attachment: fixed;
-    /* padaromas, kad paveiksliukas turetu view height ( per atidaryta langa) */
-  height: 100vh;
-  color:#fff;
  }
 
  blockquote {
@@ -425,23 +435,25 @@ header {
    margin-top: 40px;
  }
 
+ blockquote:before {
+  content: "\201C" ;
+  font-size: 500%;
+  display: block;
+  position: absolute;
+  top:-5px;
+  left:-5px;
+}
+
  cite {
    font-size: 90%;
    margin-top: 25px;
    display: block;
  }
- blockquote:before {
-   content: "\201C" ;
-   font-size: 400%;
-   display: block;
-   position: absolute;
-   top:-5px;
-   left:-5px;
- }
+
 
  cite img {
-   border-radius: 50%;
    height: 45px;
+   border-radius: 50%;
    margin-right: 10px;
    vertical-align: middle;
  }
@@ -457,9 +469,9 @@ header {
 .plan-box {
   background-color: #fff;
   border-radius: 5px;
-  width: 95%;
-  margin-left: 2.5%;
-  box-shadow: 0 2px 2px;
+  width: 90%;
+  margin-left: 5%;
+  box-shadow: 0 2px 2px #efefef;
   /* ANIMATION */
   transform: scale(0.95);
   transition: transform 0.5s, opacity 0.5s;
@@ -483,14 +495,14 @@ header {
 
 .plan-box div:last-child {
   text-align: center;
-  border:0;
+  border: 0;
 }
 
 .plan-price {
   font-size: 300%;
   margin-bottom: 10px;
   font-weight: 100;
-  color:#e67e22;
+  color: #e67e22;
 }
 
 .plan-price span {
@@ -498,18 +510,11 @@ header {
   font-weight: 300;
 }
 
-.plan-price-meal {
-  font-size: 75%;
-}
+.plan-price-meal {font-size: 80%;}
 
-.plan-box ul {
-  list-style: none;
-  font-size: 80%;
-}
+.plan-box ul {list-style: none;}
 
-.plan-box ul li {
-  padding: 5px 0;
-}
+.plan-box ul li {padding: 5px 0;}
 
  /* --------------------------------------------- */
 /* form */
@@ -518,31 +523,30 @@ header {
 .contact-form {
   width: 60%;
   margin:0 auto;
-  font-size: 80%;
 }
 
 input[type=text],
 input[type=email],
 select,
 textarea {
-  width: 70%;
+  width: 100%;
   padding: 7px;
-  border-radius: 4px;
-  border:1px solid #ccc;
+  border-radius: 3px;
+  border: 1px solid #ccc;
 }
 
-textarea {
-  height: 100px;
-}
+textarea {height: 100px;}
 /* grid css span width per didelis, todel sumazinom, kad pavadinimai ir stulpeliai butu arciau vienas kito  */
+
 #form-name {
   width: 22%;
 }
+
 input[type="checkbox"] {
-  margin:10px 5px 10px 0;
+  margin: 10px 5px 10px 0;
 }
 
-*:focus {outline:none;}
+*:focus {outline: none;}
 
  /* --------------------------------------------- */
 /* form */
@@ -550,7 +554,7 @@ input[type="checkbox"] {
 
 footer {
   background-color:#333;
-  padding: 30px;
+  padding: 50px;
   font-size: 80%;
 }
 
@@ -568,12 +572,12 @@ footer {
 .social-links li {
   display: inline-block;
   margin-right: 20px;
-  font-size: 90%;
+
 }
 
 .footer-nav li:last-child,
 .social-links li:last-child {
-  margin-right:0;
+  margin-right: 0;
 }
 
 .footer-nav li a:link,
@@ -583,23 +587,25 @@ footer {
   text-decoration: none;
   border: 0;
   color:#888;
-  transition: 0.3s;
+  -webkit-transition: color 0.2s;
+  transition: color 0.2s;
 }
 
 .footer-nav li a:hover,
 .footer-nav li a:active{
-  color:#fcfcfc;
+  color: #ddd;
 }
 .social-links li a:link,
 .social-links li a:visited {
-  font-size: 165%;
+  font-size: 160%;
 }
 
 .ion-logo-facebook,
 .ion-logo-twitter,
 .ion-logo-googleplus,
 .ion-logo-instagram {
-  transition: color 0.3s;
+  -webkit-transition: color 0.2s;
+  transition: color 0.2s;
 }
 
 .ion-logo-facebook:hover {
@@ -620,6 +626,6 @@ footer {
 footer p {
   color:#888;
   text-align: center;
-  margin-top: 60px;
+  margin-top: 20px;
   font-size: 70%;
 }
