--- a/Forfood project/resources/css/style.css
+++ b/Forfood project/resources/css/style.css
@@ -1,16 +1,10 @@
 /* ----------------------------------------------------------------------------------*/
                       /* $COPY 2018 MARBONAS */                                               
 /* -------------------------------------------------------------------------------- */
-
-
-
 /*
 orange color: #e67e22
 darker orange: #cf6d17
 */
-
-
-
 /* ------------------------------------------- */
 /* BASIC SETUP */
 /* ------------------------------------------- */
@@ -40,7 +34,6 @@ body{
   height: 0;
   visibility: hidden;
 }
-
 /* ----------------------------------------------- */
 /* REUSABLE COMPONENTS */
 /* ----------------------------------------------- */
@@ -48,16 +41,10 @@ body{
   max-width: 1140px;
   margin:0 auto;
 }
-section {
-  padding: 80px 0;
-}
+section {padding: 80px 0;}
 
-.box {
-  padding: 1%;
-}
+.box {padding: 1%;}
 /* -----------HEADINGS----------------------------- */
-
-
 h1,
 h2,
 h3 {
@@ -111,9 +98,7 @@ h2:after {
   font-size: 90%;
   line-height: 145%;
 }
-
 /* -----------ICONS------------------------------- */
-
 .icon-big {
   font-size: 350%;
   display: block;
@@ -128,15 +113,12 @@ h2:after {
   color: #cf6d17;
   font-size: 120%;
   margin-right: 10px;
-
   /* secrets align text and icons */
   line-height: 120%;
   vertical-align: middle;
   margin-top: -5px;
 }
-
 /* -----------BUTTONS------------------------------- */
-
 /* :link reiskia mygtuko busena normalioje busenoje; visited- busena aplankius */
 .btn:link, 
 .btn:visited,
@@ -168,7 +150,6 @@ input[type=submit] {
   border:1px solid #e67e22;
   color:#e67e22;
 }
-
   /* :hover busena, kai pelyte uzvaziuoja ant mygtuko, o active - paspaudus*/
 .btn:hover,
 .btn:active,
@@ -179,10 +160,7 @@ input[type=submit]:active  {
   }
 
 .btn-full:hover, 
-.btn-full:active {
-  border:1px solid #cf6d17; 
- 
-}
+.btn-full:active {border:1px solid #cf6d17; }
 
 .btn-ghost:hover, 
 .btn-ghost:active {
@@ -190,7 +168,6 @@ input[type=submit]:active  {
   color:#fff;
 }
 /* -----------links------------------------------- */
-
 a:link,
 a:visited {
     color: #e67e22;
@@ -206,11 +183,9 @@ a:active {
     color: #555;
     border-bottom: 1px solid transparent;
 }
-
 /* --------------------------------------------- */
 /* HEADER */
 /* --------------------------------------------- */
-
 header {
   /* padaromas paveiksliukas patamsintas, kad butu galima uzrasyti teksta */
   background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero-min.jpg);
@@ -222,7 +197,6 @@ header {
   height: 100vh;
   background-attachment: fixed;
       /* padaromas, kad paveiksliukas turetu view height ( per atidaryta langa) */
-  
 }
 
 .hero-text-box {
@@ -251,9 +225,6 @@ header {
   float: left;
   margin: 5px 0;
 }
-
-
-
 /* --------------------------------------------- */
 /* main navigation*/
 /* --------------------------------------------- */
@@ -281,15 +252,11 @@ header {
   /* tam kad hover veiktu, borderis turi buti, todel ji suteikiam tik padarom nematomu*/
   border-bottom: 2px solid transparent;
   -webkit-transition: border-bottom 0.2s;
-  transition: border-bottom 0.2s;
-  
+  transition: border-bottom 0.2s; 
 }
 
 .main-nav li a:hover,
-.main-nav li a:active {
-  border-bottom: 2px solid #e67e22; 
-}
-
+.main-nav li a:active {border-bottom: 2px solid #e67e22;}
 /* --------------------------------------------- */
 /* sticky nav*/
 /* --------------------------------------------- */
@@ -301,23 +268,18 @@ header {
   background-color:#fff;
           /*  x  y   blur   color */
   box-shadow: 0 2px 2px #efefef;
-  z-index: 9999;
-  
+  z-index: 9999;  
 }
 
-
 .sticky .main-nav {margin-top: 18px;}
-
 
 .sticky .main-nav li a:link,
 .sticky .main-nav li a:visited {
   padding: 10px 0;
   color:#555;
 }
-
 .sticky .logo {display: none;}
 .sticky .logo-black {display: block;}
-
 /* --------------------------------------------- */
 /* MOBILE NAVI*/
 /* --------------------------------------------- */
@@ -326,26 +288,21 @@ header {
   margin-top: 30px;
   cursor: pointer;
   display: none;
-  
 }
+
 .mobile-nav-icon i {
   font-size: 200%;
   color: #fff;
 }
-
 /* --------------------------------------------- */
 /* features*/
 /* --------------------------------------------- */
-
 .section-features .long-copy {
   margin-bottom: 30px;
-
 }
-
 /* --------------------------------------------- */
 /* MEALS*/
 /* --------------------------------------------- */
-
 .section-meals {padding: 0;}
 
 .meals-showcase {
@@ -378,9 +335,6 @@ header {
   -ms-transform: scale (1.15);
   transition: transform 0.5s, opacity 0.5s;
   -webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
-  
-  
-
 }
 /* ANIMACIJA */
 .meal-photo img:hover {
@@ -388,19 +342,12 @@ header {
   transform: scale (1.03);
   -webkit-transform: scale (1.03);
   -ms-transform: scale (1.03);
-  
 }
-
 /* --------------------------------------------- */
 /* HOW IT WORKS/
 /* --------------------------------------------- */
-
-.section-steps {
-  background-color: #f4f4f4;
-}
-.step-box {
-  margin-top: 30px;
-}
+.section-steps {background-color: #f4f4f4;}
+.step-box {margin-top: 30px;}
 
 .step-box:first-child {
   text-align: right;
@@ -413,17 +360,11 @@ header {
   margin-top: 70px;
 }
 
-.app-screen {
-  width: 40%;
-}
+.app-screen {width: 40%;}
 
-.work-step {
-  margin-bottom: 50px;
-}
+.work-step {margin-bottom: 50px;}
 /* last of type, parenka paskutini */
-.work-step:last-of-type {
-  margin-bottom: 80px;
-}
+.work-step:last-of-type {margin-bottom: 80px;}
 
 .work-step div {
   color:#cf6d17;
@@ -441,9 +382,7 @@ header {
 }
 
 .btn-app:link,
-.btn-app:visited {
-  border:0;
-}
+.btn-app:visited {border:0;}
 
 .btn-app img {
   height: 50px;
@@ -455,32 +394,21 @@ header {
   text-align: center;
   padding-left: 50px;
 }
-
 /* --------------------------------------------- */
 /* CITIES */
 /* --------------------------------------------- */
-
 .box img {
   width: 100%;
   height: auto;
   margin-bottom: 15px;
 }
 
-.cities-feature {
-  margin-bottom: 5px;
- 
-}
-
-
-.cities-feature a {
-  display: inline;
- }
-
+.cities-feature {margin-bottom: 5px;}
+.cities-feature a {display: inline;}
  /* --------------------------------------------- */
 /* Testimonials */
 /* --------------------------------------------- */
-
- .section-testimonials {
+.section-testimonials {
   background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers-min.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers-min.jpg);
   background-size: cover;
@@ -511,21 +439,17 @@ header {
    display: block;
  }
 
-
  cite img {
    height: 45px;
    border-radius: 50%;
    margin-right: 10px;
    vertical-align: middle;
  }
-
  /* --------------------------------------------- */
 /* sign up */
 /* --------------------------------------------- */
 
-.section-plans {
-  background-color: #f4f4f4;
-}
+.section-plans {background-color: #f4f4f4;}
 
 .plan-box {
   background-color: #fff;
@@ -584,11 +508,9 @@ header {
 .plan-box ul {list-style: none;}
 
 .plan-box ul li {padding: 5px 0;}
-
  /* --------------------------------------------- */
 /* form */
 /* --------------------------------------------- */
-
 .contact-form {
   width: 60%;
   margin:0 auto;
@@ -610,11 +532,9 @@ textarea {height: 100px;}
 input[type="checkbox"] {margin: 10px 5px 10px 0;}
 
 *:focus {outline: none;}
-
  /* --------------------------------------------- */
 /* form */
 /* --------------------------------------------- */
-
 footer {
   background-color:#333;
   padding: 50px;
@@ -635,7 +555,6 @@ footer {
 .social-links li {
   display: inline-block;
   margin-right: 20px;
-
 }
 
 .footer-nav li:last-child,
@@ -692,7 +611,6 @@ footer p {
   margin-top: 20px;
   font-size: 70%;
 }
-
 /* --------------------------------------------- */
 /* ANIMATIONS */
 /* --------------------------------------------- */
